--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body{
     border-radius: 0.5rem;
     border:solid var(--primary-color);;
     color: white;
+ 
 }
 
 .link-secondary{
@@ -68,9 +69,9 @@ body{
 .nav{
     background-color: var(--primary-color);
     padding:1rem;
-    margin: 1rem 1rem;
     color: white;
     border-bottom-left-radius: 1rem;
+   
 }
 
 
@@ -117,7 +118,15 @@ body{
 }
 
 /* section */
-.sections h1{
+.sections h1 {
+    text-align: center;
+}
+
+/* .sections p {
+    text-align: center;
+} */
+
+.sections a{
     text-align: center;
 }
 
@@ -125,6 +134,8 @@ body{
     background-color: var(--secondary-color);
     border-radius: 1rem;
 }
+
+
 
 
 /* footer */
