--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ body{
     border-radius: 0.5rem;
     border:solid var(--primary-color);;
     color: white;
- 
 }
 
 .link-secondary{
@@ -122,9 +121,9 @@ body{
     text-align: center;
 }
 
-/* .sections p {
+.sections p {
     text-align: center;
-} */
+}
 
 .sections a{
     text-align: center;
@@ -142,9 +141,10 @@ body{
 
 .footer{
     background-color: var(--primary-color);
-    padding: 1rem;
+    padding: 0.5rem;
     color: white;
     border-top-right-radius: 1rem;
+    margin: 1rem;
 
 }
 
@@ -155,6 +155,12 @@ body{
 
 .footer-text {
     text-align: center;
+    text-decoration: none;
+    color: white;
+}
+
+
+.footer-links{
     text-decoration: none;
     color: white;
 }
